NJU-ProjectN/nvboard master initialized without tracing
NJU-ProjectN/nvboard f38aa2ac97e3d0b0ba4e71c771f004bde8d18201 Merge pull request #41 from OldLiu001/master

--- a/npc/Makefile
+++ b/npc/Makefile
@@ -1,8 +1,20 @@
+VERILATOR_FLASS = --cc --exe --build --trace-fst
+
 all:
 	@echo "Write this Makefile by your self."
 
 sim:
 	$(call git_commit, "sim RTL") # DO NOT REMOVE THIS LINE!!!
-	@echo "Write this Makefile by your self."
+	verilator $(VERILATOR_FLASS) verilog.v test.cpp
+
+wave:
+	obj_dir/Vverilog
+	gtkwave wave.fst
+
+
+clean:
+	rm -rf obj_dir
+
+.PHONY: clean sim wave
 
 include ../Makefile
