--- a/nemu/Kconfig
+++ b/nemu/Kconfig
@@ -151,6 +151,15 @@ config ITRACE_COND
   string "Only trace instructions when the condition is true"
   default "true"
 
+config MTRACE_READ
+	depends on TRACE 
+	bool "Enable memory read tracer"
+	default n
+
+config MTRACE_WRITE
+	depends on TRACE
+	bool "Enable memory write tracer"
+	default n
 
 config DIFFTEST
   depends on TARGET_NATIVE_ELF
