Modify a lot on both cpp files and Makefile, complete the sdb except cmd_i, but dummy has returning bugs

--- a/nebula-core/Makefile
+++ b/nebula-core/Makefile
@@ -1,37 +1,41 @@
-VERILATOR_FLASS = --cc --exe --build --trace-fst
+VERILATOR_FLAGS = --cc --exe --build --trace-fst
 
-# dir to all verilog file
+# all verilog files
 VERILOG_DIR = $(NPC_HOME)/vsrc
-
-# all verilog file
 VERILOG_SRCS = $(shell find $(VERILOG_DIR) -name "*.v")
 
-# dir to all cpp file
+# all cpp files
 CPP_DIR = $(NPC_HOME)/csrc
-
-# all cpp file
 CPP_SRCS = $(shell find $(CPP_DIR) -name "*.cpp")
+
+# dir to all headfiles
+HEAD_DIR = $(NPC_HOME)/csrc/include
 
 # top module
 TOP_MODULE = ysyx_25040101_riscv
 
-#IMG file
+# object dir
+OBJ_DIR = obj_dir
+
+# IMG file
 IMG ?=
+
+# arguments
+ARGS ?= 
 
 sim:
 	$(call git_commit, "sim RTL") # DO NOT REMOVE THIS LINE!!!
-	verilator $(VERILATOR_FLASS) $(VERILOG_SRCS) $(CPP_SRCS) --top-module $(TOP_MODULE)
+	verilator $(VERILATOR_FLAGS) $(VERILOG_SRCS) $(CPP_SRCS) --top-module $(TOP_MODULE) --CFLAGS "-I$(HEAD_DIR) -g"
 
 run: sim
-	obj_dir/V$(TOP_MODULE) $(IMG)
+	obj_dir/V$(TOP_MODULE) $(IMG) $(ARGS)
 
-wave: sim run
-	gtkwave waveform.fst
-
+gdb: sim
+	gdb obj_dir/V$(TOP_MODULE) $(IMG) $(ARGS)
 
 clean:
 	rm -rf obj_dir waveform.fst waveform.fst.hier
 
-.PHONY: clean sim wave
+.PHONY: clean sim wave run
 
 include ../Makefile
