--- a/nemu/Kconfig
+++ b/nemu/Kconfig
@@ -176,6 +176,11 @@ config DTRACE_WRITE
 	bool "Enable device write tracer"
 	default n
 
+config ETRACE
+	depends on TRACE
+	bool "Enable exception tracer"
+	default n
+
 config DIFFTEST
   depends on TARGET_NATIVE_ELF
   bool "Enable differential testing"
